--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,7 @@
-<p>about works!</p>
+<h1 class="animated fadeIn fast">Sobre Comic App</h1>
+<hr>
+<p class="animated fadeIn">
+
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste odio nulla quaerat accusamus soluta numquam exercitationem placeat earum at quia sapiente, pariatur, accusantium molestias delectus voluptatem! Voluptates ducimus consectetur sapiente!
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum quae nihil dolores, incidunt omnis aperiam. Ullam eveniet dolorem architecto consequatur, impedit odit dolor est incidunt reiciendis accusantium dolorum, ad adipisci.
+</p>
